<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.itachi.calculator.MainActivity">

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="90dp"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/clear"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    <Button
        android:id="@+id/btn_zero"
        android:layout_width="90dp"
        android:layout_height="75dp"
        android:layout_below="@+id/btn_two"
        android:layout_toEndOf="@+id/btn_clear"
        android:layout_toRightOf="@+id/btn_clear"
        android:text="@string/_0"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <Button
        android:id="@+id/btn_equal"
        android:layout_width="90dp"
        android:layout_height="75dp"
        android:text="@string/equals"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/btn_zero"
        android:layout_toEndOf="@+id/btn_zero" />

    <Button
        android:id="@+id/btn_div"
        android:layout_width="90dp"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/bhaag"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_toRightOf="@+id/btn_equal"
        android:layout_toEndOf="@+id/btn_equal" />

    <Button
        android:id="@+id/btn_one"
        android:layout_width="90dp"
        android:layout_height="75dp"
        android:layout_above="@+id/btn_clear"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/ek_1"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <Button
        android:id="@+id/btn_two"
        android:layout_width="90dp"
        android:layout_height="75dp"
        android:layout_above="@+id/btn_clear"
        android:layout_toEndOf="@+id/btn_one"
        android:layout_toRightOf="@+id/btn_one"
        android:text="@string/do_2"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <Button
        android:id="@+id/btn_three"
        android:layout_width="90dp"
        android:layout_height="75dp"
        android:layout_above="@+id/btn_zero"
        android:layout_toEndOf="@+id/btn_two"
        android:layout_toRightOf="@+id/btn_two"
        android:text="@string/teen_3"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <Button
        android:id="@+id/btn_mul"
        android:layout_width="90dp"
        android:layout_height="75dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/btn_three"
        android:text="@string/guna"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_toRightOf="@+id/btn_equal"
        android:layout_toEndOf="@+id/btn_equal" />

    <Button
        android:id="@+id/btn_four"
        android:layout_width="90dp"
        android:layout_height="75dp"
        android:layout_above="@+id/btn_one"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/char_4"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <Button
        android:id="@+id/btn_five"
        android:layout_width="90dp"
        android:layout_height="75dp"
        android:layout_above="@+id/btn_two"
        android:layout_toEndOf="@+id/btn_one"
        android:layout_toRightOf="@+id/btn_one"
        android:text="@string/paanch_5"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <Button
        android:id="@+id/btn_six"
        android:layout_width="90dp"
        android:layout_height="75dp"
        android:layout_above="@+id/btn_two"
        android:layout_toEndOf="@+id/btn_five"
        android:layout_toRightOf="@+id/btn_five"
        android:text="@string/che_6"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="90dp"
        android:layout_height="75dp"
        android:layout_above="@+id/btn_sub"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/jama"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_toRightOf="@+id/btn_six"
        android:layout_toEndOf="@+id/btn_six" />

    <Button
        android:id="@+id/btn_seven"
        android:layout_width="90dp"
        android:layout_height="75dp"
        android:layout_above="@+id/btn_four"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/saat_7"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <Button
        android:id="@+id/btn_eight"
        android:layout_width="90dp"
        android:layout_height="75dp"
        android:layout_above="@+id/btn_five"
        android:layout_toEndOf="@+id/btn_four"
        android:layout_toRightOf="@+id/btn_four"
        android:text="@string/aath_8"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <Button
        android:id="@+id/btn_nine"
        android:layout_width="90dp"
        android:layout_height="75dp"
        android:layout_above="@+id/btn_five"
        android:layout_toEndOf="@+id/btn_five"
        android:layout_toRightOf="@+id/btn_five"
        android:text="@string/no_9"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <Button
        android:id="@+id/btn_sub"
        android:layout_width="90dp"
        android:layout_height="75dp"
        android:layout_above="@+id/btn_mul"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/ghata"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_toRightOf="@+id/btn_three"
        android:layout_toEndOf="@+id/btn_three" />

    <TextView
        android:id="@+id/txt_input"
        android:layout_width="match_parent"
        android:layout_height="35sp"
        android:hint="@string/input_number"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="38dp" />

    <TextView
        android:id="@+id/txt_result"
        android:layout_width="wrap_content"
        android:layout_height="35sp"
        android:hint="@string/end_result"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txt_input"
        android:layout_marginTop="21dp" />


</RelativeLayout>
